<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/food_animation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.35"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:letterSpacing="0.02"
        android:fontFamily="@font/nunito_black"
        app:layout_constraintTop_toBottomOf="@id/lottieView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/appTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:alpha="0.9"
        android:letterSpacing="0.05"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="4dp"
        android:layout_marginTop="40dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/appTagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:alpha="0.6"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>